--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -14,9 +14,9 @@
   </button>
   <h1 class="artist-name">{{ artistName }}</h1>
 </div>
-
-<p>{{ biography }}</p>
-
+<div class="bio">
+  <p>{{ biography }}</p>
+</div>
 <app-video-player [artistName]="artistName"></app-video-player>
 
 <h2>Similar Artists</h2>
