added video to query params in artist page

--- a/src/app/video-card/video-card.component.html
+++ b/src/app/video-card/video-card.component.html
@@ -1,2 +1,4 @@
-<p>{{videoInfo.title}}</p>
-<img src="{{videoInfo.thumbnail}}" alt="">
+<div (click)="goToArtist()">
+    <p>{{videoInfo.title}}</p>
+    <img src="{{videoInfo.thumbnail}}" alt="">
+</div>
