--- a/src/app/artist-list/artist-list.component.html
+++ b/src/app/artist-list/artist-list.component.html
@@ -6,7 +6,7 @@
     [name]="item.name"
   ></app-artist-card>
 </div>
-<!-- <div class="artists">
+<!-- <div class="artists-home-view" *ngIf="router.url === '/home'">
   <app-artist-card
     (artistClicked)="goToArtist($event)"
     class="artist-card"
