--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,4 +32,5 @@
 </section>
 <section class="desktop-section">
   <app-header></app-header>
+  <app-artist-list [list]="topArtists"></app-artist-list>
 </section>
