favorites list is dynamic

--- a/src/app/artist-card/artist-card.component.html
+++ b/src/app/artist-card/artist-card.component.html
@@ -3,7 +3,7 @@
     <img
       class="artist-img"
       src="{{ sampleImageUrl }}"
-      default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png"
+      default="https://cdn.onlinewebfonts.com/svg/img_258083.png"
     />
   </div>
   <button>
@@ -13,5 +13,5 @@
     ></i>
   </button>
 
-  <p (click)="goToArtist()" class="artist-name">{{ artistInfo.name }}</p>
+  <p (click)="goToArtist()" class="artist-name">{{ name }}</p>
 </div>
