--- a/src/app/artist-list/artist-list.component.html
+++ b/src/app/artist-list/artist-list.component.html
@@ -1,6 +1,7 @@
 <div class="artists">
   <app-artist-card
     (artistClicked)="goToArtist($event)"
+    (favoriteEvent)="updateFavorites()"
     class="artist-card"
     *ngFor="let item of list.slice(0, 10)"
     [name]="item.name"
