--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,13 +9,17 @@
     </header>
     <div class="artists-box">
       <h1 class="headline">top artists</h1>
-      <app-artist-list class="artists" (favoriteEvent) = "getFavoriteArtists()" [list]="topArtists"></app-artist-list>
+      <app-artist-list
+        class="artists"
+        (favoriteEvent)="getFavoriteArtists()"
+        [list]="topArtists"
+      ></app-artist-list>
     </div>
     <div class="artists-box">
       <h1 class="headline">recently played</h1>
       <app-artist-list
         class="artists"
-        (favoriteEvent) = "getFavoriteArtists()"
+        (favoriteEvent)="getFavoriteArtists()"
         [list]="recentlyPlayed"
       ></app-artist-list>
     </div>
@@ -23,7 +27,7 @@
       <h1 class="headline">favorite artists</h1>
       <app-artist-list
         class="artists"
-        (favoriteEvent) = "updatePage()"
+        (favoriteEvent)="updatePage()"
         [list]="favoriteArtists"
       ></app-artist-list>
     </div>
@@ -34,5 +38,6 @@
 </section>
 <section class="desktop-section">
   <app-header></app-header>
-  <app-artist-list [list]="topArtists"></app-artist-list>
+
+  <app-home-top-artists [list]="topArtists"></app-home-top-artists>
 </section>
