changed media queries

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,9 +16,11 @@ body {
 }
 
 /* mobile view _____________________________ */
+@media only screen and (min-width: 600px) {
+}
 /* tablet view _____________________________ */
-@media (min-width: 481px) and (max-width: 899px) {
+@media only screen and (min-width: 768px) {
 }
 /* desktop view _____________________________ */
-@media screen and (min-width: 900px) {
+@media only screen and (min-width: 992px) {
 }
