fixed more mistakes i made

--- a/src/app/artist-card/artist-card.component.html
+++ b/src/app/artist-card/artist-card.component.html
@@ -6,7 +6,7 @@
       default="https://cdn.onlinewebfonts.com/svg/img_258083.png"
     />
   </div>
-  <button>
+  <button class="button">
     <i
       [ngClass]="favoritesId ? 'fas fa-minus-circle' : 'fas fa-plus-circle'"
       (click)="toggleFavorites()"
