--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -19,16 +19,10 @@ a:visited {
   position: relative;
   min-height: 100vh;
 }
-.mobile-header {
-  margin-bottom: 2vw;
-  position: relative;
-  margin-bottom: 2vw;
-  height: 15vh;
-}
+
 .home-search-m {
   position: absolute;
   display: flex;
-  justify-content: center;
   margin-top: 2vw;
   left: 25vw;
   top: 18vw;
@@ -43,9 +37,6 @@ a:visited {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  margin: 0;
-  position: relative;
 }
 .headline {
   font-size: 6vw;
@@ -53,14 +44,10 @@ a:visited {
   font-variant: small-caps;
   position: absolute;
 }
-
 .artists {
   width: 100%;
   overflow: scroll;
   margin-top: 4vh;
-}
-.favs {
-  margin-bottom: 8vw;
 }
 
 .footer-m {
@@ -69,52 +56,21 @@ a:visited {
   position: absolute;
   width: 100vw;
   bottom: 1vw;
-  height: 5vw;
-}
-
-.not-footer {
-  padding-bottom: 5vw;
 }
 
 /* tablet view _____________________________ */
 @media only screen and (min-width: 768px) {
 }
 /* desktop view _____________________________ */
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 1025px) {
   .mobile-section {
     display: none;
   }
   .desktop-section {
-    display: inline;
-    position: relative;
-    min-width: 100vh;
+    display: flex;
+    flex-direction: column;
   }
 
-  .desktop-header {
-    margin-bottom: 2vw;
-    /* position: relative; */
-    display: block;
-
-    min-height: 50vh;
-  }
-
-  .header-comp {
-    max-height: 27vh;
-    position: -webkit-sticky;
-    position: sticky;
-    margin-bottom: 2vw;
-  }
-
-  .tagline-box {
-    position: -webkit-sticky;
-    position: sticky;
-    left: 32vw;
-    top: 29vh;
-    /* top: 29vh; */
-    margin: 1vw 0;
-    /* display: block; */
-    width: 40vw;
-  }
   .tagline {
     width: 40vw;
     font: 2vw;
@@ -124,45 +80,59 @@ a:visited {
     left: 32vw;
   }
 
-  .home-search-d {
-    position: -webkit-sticky;
-    position: sticky;
-    /* width: 100vw; */
-    height: 5vw;
-    left: 20vw;
-    top: 45vh;
+  .vertical {
+    position: relative;
+    overflow: scroll;
+    overflow-x: hidden;
+    height: 43vh;
+    width: 12vw;
+    margin-right: 0vw;
   }
-  .search-bar-d {
-    border-radius: 20px;
+
+  .vertical::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: white;
-    display: flex;
-    justify-content: space-between;
-    padding-left: 2vw;
-
-    /* height: 5vw; */
-    width: 50vw;
+    border-radius: 10px;
   }
 
-  .search-input-d,
-  .search-input-d:focus {
-    border: none;
-    outline: none;
-    font-size: 2vw;
-    flex-grow: 9;
-    padding: 0;
-    margin: 0;
-    /* height: 5vw; */
+  .vertical::-webkit-scrollbar {
+    width: 10px;
+    background-color: black;
   }
 
-  .search-button-d {
-    background-color: transparent;
-    border: none;
-    flex-grow: 1;
-    padding: 0;
-    margin-left: 2vw;
+  .vertical::-webkit-scrollbar-thumb {
+    background-color: black;
+    border: 2px solid #555555;
+    border-radius: 10px;
   }
 
-  .fa-search {
-    font-size: 2vw;
+  .favs-box {
+    left: 86vw;
+    bottom: 42vh;
+  }
+
+  .recent-box {
+    left: 86vw;
+    bottom: 42vh;
+  }
+
+  .recently-viewed {
+    font-variant: small-caps;
+    position: relative;
+    left: 86vw;
+    bottom: 42vh;
+    font-size: 1.8vw;
+    width: 12vw;
+    overflow-wrap: break-word;
+    text-align: center;
+    line-height: 20px;
+    margin: 1vh 0;
+  }
+
+  .top-artists-d {
+    position: relative;
+    bottom: 90vh;
+    height: 50vh;
   }
 }
