--- a/src/styles.css
+++ b/src/styles.css
@@ -19,5 +19,9 @@ body {
 @media only screen and (min-width: 768px) {
 }
 /* desktop view _____________________________ */
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 1025px) {
+  body {
+    height: 100vh;
+    overflow: hidden;
+  }
 }
