--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,10 +1,6 @@
 h1 {
   margin: 0;
 }
-main {
-  width: 100vw;
-  height: 100vh;
-}
 
 a,
 a:visited {
@@ -17,7 +13,6 @@ a:visited {
 }
 .mobile-section {
   position: relative;
-  min-height: 100vh;
 }
 
 .home-search-m {
@@ -122,11 +117,11 @@ a:visited {
     position: relative;
     left: 86vw;
     bottom: 42vh;
-    font-size: 1.8vw;
+    font-size: 1.5vw;
     width: 12vw;
     overflow-wrap: break-word;
     text-align: center;
-    line-height: 20px;
+    line-height: 25px;
     margin: 1vh 0;
   }
 
@@ -134,5 +129,6 @@ a:visited {
     position: relative;
     bottom: 90vh;
     height: 50vh;
+    z-index: -1;
   }
 }
