--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -13,6 +13,7 @@ a:visited {
 }
 .mobile-section {
   position: relative;
+  height: 100vh;
 }
 
 .home-search-m {
@@ -64,6 +65,7 @@ a:visited {
   .desktop-section {
     display: flex;
     flex-direction: column;
+    height: 100vh;
   }
 
   .tagline {
@@ -76,12 +78,13 @@ a:visited {
   }
 
   .vertical {
-    position: relative;
+    position: fixed;
     overflow: scroll;
     overflow-x: hidden;
     height: 43vh;
     width: 12vw;
     margin-right: 0vw;
+    z-index: 2;
   }
 
   .vertical::-webkit-scrollbar-track {
@@ -104,19 +107,19 @@ a:visited {
 
   .favs-box {
     left: 86vw;
-    bottom: 42vh;
+    top: 6vh;
   }
 
   .recent-box {
     left: 86vw;
-    bottom: 42vh;
+    top: 55vh;
   }
 
   .recently-viewed {
     font-variant: small-caps;
     position: relative;
     left: 86vw;
-    bottom: 42vh;
+    top: 3vh;
     font-size: 1.5vw;
     width: 12vw;
     overflow-wrap: break-word;
@@ -127,8 +130,16 @@ a:visited {
 
   .top-artists-d {
     position: relative;
-    bottom: 90vh;
-    height: 50vh;
     width: 80vw;
+    padding: 0 0 15vh 2vw;
+  }
+
+  .footer-d {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    width: 100vw;
+    bottom: 1vw;
+    padding-top: 3vh;
   }
 }
