--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -48,4 +48,7 @@
     class="top-artists-d"
     [list]="topArtists"
   ></app-home-top-artists>
+  <div class="footer-d">
+    <a routerLink="/about">About the Developers</a>
+  </div>
 </section>
