video component changes

--- a/src/app/video-card/video-card.component.html
+++ b/src/app/video-card/video-card.component.html
@@ -1,4 +1,8 @@
 <div (click)="goToArtist()">
     <p>{{videoInfo.title}}</p>
     <img src="{{videoInfo.thumbnail}}" alt="">
+    <button class = "button">
+        <i>
+        </i>
+    </button>
 </div>
