--- a/src/app/video-player/video-player.component.css
+++ b/src/app/video-player/video-player.component.css
@@ -4,3 +4,7 @@
 /* desktop view _____________________________ */
 @media only screen and (min-width: 1025px) {
 }
+
+.video-selector{
+    display: flex;
+}
