--- a/src/app/artist/artist.component.css
+++ b/src/app/artist/artist.component.css
@@ -1,3 +1,14 @@
+h1,
+h2,
+p {
+  margin: 0;
+}
+a,
+a:visited {
+  text-decoration: none;
+  color: white;
+}
+
 .artist-img {
   border-radius: 50%;
   -webkit-box-shadow: 2px 2px 19px 9px rgba(255, 255, 255, 0.49);
@@ -5,8 +16,8 @@
   box-shadow: 2px 2px 19px 9px rgba(255, 255, 255, 0.49);
 }
 
-button,
-button:focus {
+.icon,
+.icon:focus {
   outline: none;
   border: none;
   background: transparent;
@@ -16,12 +27,15 @@ button:focus {
 .fa-minus-circle {
   color: white;
   position: absolute;
-
   opacity: 0.8;
   -webkit-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
   box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
   border-radius: 50%;
+  font-size: 6vw;
+  flex-grow: 0;
+  top: 8vh;
+  left: 20vw;
 }
 
 .fa-plus-circle:active,
@@ -32,41 +46,81 @@ button:focus {
 .artist-headline {
   display: flex;
   justify-content: center;
-  margin: 2vw 2vw 2vw 5vw;
+  margin: 0 2vw 2vw 5vw;
   position: relative;
 }
-.fa-plus-circle,
-.fa-minus-circle {
-  font-size: 6vw;
-  flex-grow: 0;
-  top: 10vh;
-  left: 20vw;
-}
+
 .artist-img {
   max-width: 25vw;
-  margin-right: 5vw;
+  margin-right: 3vw;
   flex-grow: 1;
+  width: 100%;
 }
 
 .artist-name {
   font-variant: small-caps;
-  font-size: 8vw;
+  font-size: 9vw;
   overflow-wrap: break-word;
   word-wrap: break-word;
   hyphens: auto;
   flex-grow: 2;
+  margin: 2vh 1vw 0 0;
 }
 
+.bio-btn {
+  position: absolute;
+  color: white;
+  background-color: black;
+  right: 1vw;
+  top: 8vh;
+}
+.artists {
+  width: 100%;
+  overflow: scroll;
+}
 .video-box {
   width: 100vw;
   margin: 5vw;
 }
-
-.bio {
-  height: 15vh;
+.artists-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.bio-box {
+  height: 0vh;
   width: 100vw;
-  overflow: scroll;
   margin-bottom: 2vh;
+  background: rgba(0, 0, 0, 0.7);
+  /* position: relative; */
+  z-index: 2;
+  bottom: 0vh;
+  -webkit-transition: height 0.35s ease-in-out;
+  transition: height 0.35s ease-in-out;
+  overflow: scroll;
+}
+
+.transform {
+  height: 50vh;
+}
+
+.bio-p {
+  -webkit-transition: height 0.35s ease-in-out;
+  transition: height 0.35s ease-in-out;
+  height: 0;
+  max-width: 100vw;
+  padding: 1vh 3vw;
+  word-wrap: break-word;
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  width: 100vw;
+  bottom: 1vw;
+}
+.hidden {
+  display: none;
 }
 
 /* tablet view _____________________________ */
