--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -1,23 +1,27 @@
 <app-header></app-header>
-
 <div class="artist-headline">
   <img
     class="artist-img"
     src="{{ imgUrl }}"
     default="https://miro.medium.com/max/360/1*W35QUSvGpcLuxPo3SRTH4w.png"
   />
-  <button>
+  <button class="icon">
     <i
       [ngClass]="favoritesId ? 'fas fa-minus-circle' : 'fas fa-plus-circle'"
       (click)="toggleFavorites()"
     ></i>
   </button>
   <h1 class="artist-name">{{ artistName }}</h1>
-</div>
-<div class="bio">
-  <p>{{ biography }}</p>
+  <button class="bio-btn" (click)="toggleBio()">Bio+</button>
 </div>
 <app-video-player [artistName]="artistName"></app-video-player>
-
-<h2>Similar Artists</h2>
-<app-artist-list [list]="similar"></app-artist-list>
+<div class="bio-box" [ngClass]="{ transform: bioExpand }">
+  <p class="bio-p" [ngClass]="{ transform: bioExpand }">{{ biography }}</p>
+</div>
+<div class="artists-box">
+  <h2>Similar Artists</h2>
+  <app-artist-list class="artists" [list]="similar"></app-artist-list>
+</div>
+<div class="footer" [ngClass]="{ hidden: bioExpand }">
+  <a routerLink="/about">About the Developers</a>
+</div>
