--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -33,6 +33,11 @@ a:visited {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 2vh;
+}
+
+.top {
+  margin-top: 5vh;
 }
 .headline {
   font-size: 6vw;
@@ -49,9 +54,9 @@ a:visited {
 .footer-m {
   display: flex;
   justify-content: center;
-  position: absolute;
   width: 100vw;
   bottom: 1vw;
+  margin-top: 4vh;
 }
 
 /* tablet view _____________________________ */
