--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <app-search class="search-bar-m"></app-search>
   </div>
 
-  <div class="artists-box">
+  <div class="artists-box top">
     <h1 class="headline">top artists</h1>
     <app-artist-list
       class="artists"
