--- a/src/app/favorites/favorites.component.css
+++ b/src/app/favorites/favorites.component.css
@@ -1,3 +1,43 @@
+h1 {
+    margin: 0;
+}
+
+a,
+a:visited {
+  text-decoration: none;
+  color: white;
+}
+
+.mobile-section {
+    position: relative;
+    height: 100vh;
+  }
+
+.artists-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+.artists {
+    width: 100%;
+    overflow: scroll;
+    margin-top: 4vh;
+  }
+
+.videos {
+  width: 100%;
+  overflow: scroll;
+  margin-top: 4vh;
+}
+
+.headline {
+    font-size: 6vw;
+    font-weight: 600;
+    font-variant: small-caps;
+    position: absolute;
+  }
+
 /* tablet view _____________________________ */
 @media only screen and (min-width: 768px) {
 }
