--- a/src/app/video-card/video-card.component.css
+++ b/src/app/video-card/video-card.component.css
@@ -1,3 +1,60 @@
+
+.video-img {
+    -webkit-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+    -moz-box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+    box-shadow: 0px 0px 7px 7px rgba(255, 255, 255, 0.49);
+    max-width: 100%;
+  }
+
+  .video-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    width: 29vw;
+  }
+
+.button,
+.button:focus {
+  outline: none;
+  border: none;
+  background: transparent;
+  padding: 0;
+  margin: 0;
+  height: 0;
+  width: 0;
+}
+
+.fa-plus-circle,
+.fa-minus-circle {
+  color: white;
+  font-size: 6.5vw;
+  position: relative;
+  bottom: 4vh;
+  left: 8vw;
+  opacity: 0.8;
+  border-radius: 50%;
+  -webkit-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
+  box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.75);
+}
+
+.fa-plus-circle:active,
+.fa-minus-circle:active {
+  color: #00ff48;
+}
+
+.artist-name {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
+    text-align: center;
+    line-height: 12px;
+    font-size: 3.5vw;
+    margin: 2vw 0;
+  }
+  
+
 /* tablet view _____________________________ */
 @media only screen and (min-width: 768px) {
 }
