--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,34 @@
-<p>about works!</p>
+<section class="container">
+  <h1 class="h1">About The Developers</h1>
+  <div class="dev1 sim">
+    <img src="assets/img/image.png" alt="chris" />
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi pariatur
+      enim dicta, expedita beatae officia nostrum atque nisi praesentium libero.
+      Quis perspiciatis libero quia deserunt, harum dolore enim unde tempore?
+    </p>
+  </div>
+  <div class="dev2 sim">
+    <img src="assets/img/headshot (2).jpg" alt="ab" />
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum
+      accusamus natus est ipsam nisi, aspernatur pariatur quae mollitia dolorum
+      voluptatibus, tempora commodi eos expedita harum quam beatae ipsa dolore.
+    </p>
+  </div>
+  <div class="dev3 sim">
+    <img src="assets/img/IMG_3365.jpg" alt="kati" />
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam vel amet
+      consectetur sint dolorum tenetur excepturi. Porro, ea enim suscipit,
+      perspiciatis repudiandae qui hic necessitatibus facilis error non,
+      consequuntur est.
+    </p>
+  </div>
+  <div>
+    <h2>linked In</h2>
+    <p>https://www.linkedin.com/in/chris-shaohualiu-liu/</p>
+    <p>https://www.linkedin.com/in/kati-johnson/</p>
+    <p>https://www.linkedin.com/in/abdullahthedev/</p>
+  </div>
+</section>
