--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,3 +1,31 @@
+.container {
+  height: 100%;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.h1 {
+  position: absolute;
+  margin-left: 35%;
+}
+
+.dev1 {
+  margin-top: 100px;
+  position: relative;
+  padding: 10px;
+}
+
+.dev2 {
+  margin-left: 35%;
+  position: relative;
+  padding: 10px;
+}
+
+.dev3 {
+  margin-left: 0%;
+  padding: 10px;
+}
+
 /* tablet view _____________________________ */
 @media only screen and (min-width: 768px) {
 }
