--- a/src/app/artist/artist.component.css
+++ b/src/app/artist/artist.component.css
@@ -16,8 +16,8 @@ a:visited {
   box-shadow: 2px 2px 19px 9px rgba(255, 255, 255, 0.49);
 }
 
-.icon,
-.icon:focus {
+button,
+button:focus {
   outline: none;
   border: none;
   background: transparent;
@@ -74,6 +74,11 @@ a:visited {
   right: 1vw;
   top: 8vh;
 }
+
+.fa-minus-square,
+.fa-expand {
+  padding-left: 1vw;
+}
 .artists {
   width: 100%;
   overflow: scroll;
@@ -90,9 +95,8 @@ a:visited {
 .bio-box {
   height: 0vh;
   width: 100vw;
-  margin-bottom: 2vh;
   background: rgba(0, 0, 0, 0.7);
-  /* position: relative; */
+  position: fixed;
   z-index: 2;
   bottom: 0vh;
   -webkit-transition: height 0.35s ease-in-out;
@@ -101,7 +105,7 @@ a:visited {
 }
 
 .transform {
-  height: 50vh;
+  height: 48vh;
 }
 
 .bio-p {
@@ -109,15 +113,15 @@ a:visited {
   transition: height 0.35s ease-in-out;
   height: 0;
   max-width: 100vw;
-  padding: 1vh 3vw;
+  padding: 0 3vw;
   word-wrap: break-word;
 }
-.footer {
+.footer-m {
   display: flex;
   justify-content: center;
-  position: fixed;
   width: 100vw;
   bottom: 1vw;
+  margin-top: 4vh;
 }
 .hidden {
   display: none;
