--- a/src/app/video-player/video-player.component.html
+++ b/src/app/video-player/video-player.component.html
@@ -1,19 +1,23 @@
 <div>
-<div #wrapper class="demo-youtube-player">
-  <youtube-player
+  <div #wrapper class="demo-youtube-player">
+    <youtube-player
+      videoId="{{ currentVideoId }}"
+      [width]="videoWidth"
+      [height]="videoHeight"
+      suggestedQuality="highres"
+    ></youtube-player>
+  </div>
+  <button (click)="getArtistVideos()">contact youtube api</button>
+  <button (click)="addVideoToFavorites()">favorite</button>
 
-  videoId="{{currentVideoId}}" 
-  [width]="videoWidth" 
-  [height]="videoHeight"
-  suggestedQuality="highres" ></youtube-player>
-</div>
-<button (click)="getArtistVideos()">contact youtube api</button>
-<button (click)="addVideoToFavorites()">favorite</button>
-
-<div class="video-selector">
-  <div (click)="nextVideo()"><img src="{{nextVideoThumbnail}}" alt=""><p>Next</p></div>
-  <div (click)="previousVideo()"><img src="{{previousVideoThumbnail}}" alt=""><p>Previous</p></div>
-</div>
-
-
+  <div class="video-selector">
+    <div (click)="nextVideo()">
+      <img src="{{ nextVideoThumbnail }}" alt="" />
+      <p>Next</p>
+    </div>
+    <div (click)="previousVideo()">
+      <img src="{{ previousVideoThumbnail }}" alt="" />
+      <p>Previous</p>
+    </div>
+  </div>
 </div>
